--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,10 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    /* Path mapping */
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"],},
 
     /* Linting */
     "strict": true,
